# AI_Engineer_Programming_Test-Agentic_AI

./: .env.example  .gitignore  README.md  knowledge_base.txt  langgraph.json  pyproject.toml  utils.py
src/react_agent/: __init__.py  context.py  graph.py  prompts.py  state.py  tools.py
